Overflow issues

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -216,7 +216,6 @@ $clr6: #37393A
 	display: grid
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
 	height: 100%
-	position: relative
 	overflow: auto
 	overflow-x: hidden
 	width: 100%
@@ -224,7 +223,7 @@ $clr6: #37393A
 		display: flex
 		flex-direction: column
 		grid-column: 1/9
-		height: auto
+		height: 100%
 		margin: 1em 0
 		.see-More
 			background: $clr1
@@ -474,7 +473,7 @@ $clr6: #37393A
 		padding-bottom: 1em
 		display: flex
 		flex-wrap: wrap
-		height: auto
+		height: 100%
 		justify-content: space-between
 		position: relative
 		width: 100%
